fix list view missing border

--- a/src/ui/styles/_elements.scss
+++ b/src/ui/styles/_elements.scss
@@ -354,9 +354,12 @@ QLineEdit {
 }
 
 QListWidget {
+  background: transparent;
   border: $default-element-border;
-  border-bottom-right-radius: $scrollbar-border-radius + 6px;
-  border-top-right-radius: $scrollbar-border-radius + 6px;
+  border-bottom-right-radius: $scrollbar-border-radius + 7px;
+  border-top-right-radius: $scrollbar-border-radius + 7px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
   & QScrollBar:vertical {
     border-right: 0px solid $border;
   }
