--- a/src/ui/styles/alien.css
+++ b/src/ui/styles/alien.css
@@ -273,9 +273,12 @@ QLineEdit {
   border-radius: 5; }
 
 QListWidget {
+  background: transparent;
   border: 2px solid #586c5b;
-  border-bottom-right-radius: 21px;
-  border-top-right-radius: 21px; }
+  border-bottom-right-radius: 22px;
+  border-top-right-radius: 22px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px; }
   QListWidget QScrollBar:vertical {
     border-right: 0px solid #586c5b; }
   QListWidget QScrollBar:horizontal {
